@@ -70,26 +70,6 @@ begin_import
 import|import
 name|java
 operator|.
-name|security
-operator|.
-name|MessageDigest
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|security
-operator|.
-name|NoSuchAlgorithmException
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
 name|util
 operator|.
 name|Collection
@@ -181,47 +161,6 @@ name|FSDirectory
 extends|extends
 name|Directory
 block|{
-DECL|field|DIGESTER
-specifier|private
-specifier|final
-specifier|static
-name|MessageDigest
-name|DIGESTER
-decl_stmt|;
-static|static
-block|{
-try|try
-block|{
-name|DIGESTER
-operator|=
-name|MessageDigest
-operator|.
-name|getInstance
-argument_list|(
-literal|"MD5"
-argument_list|)
-expr_stmt|;
-block|}
-catch|catch
-parameter_list|(
-name|NoSuchAlgorithmException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|RuntimeException
-argument_list|(
-name|e
-operator|.
-name|toString
-argument_list|()
-argument_list|,
-name|e
-argument_list|)
-throw|;
-block|}
-block|}
 comment|/**    * Default read chunk size.  This is a conditional default: on 32bit JVMs, it defaults to 100 MB.  On 64bit JVMs, it's    *<code>Integer.MAX_VALUE</code>.    *    * @see #setReadChunkSize    */
 DECL|field|DEFAULT_READ_CHUNK_SIZE
 specifier|public
@@ -1130,49 +1069,6 @@ name|BUFFER_SIZE
 argument_list|)
 return|;
 block|}
-comment|/**    * So we can do some byte-to-hexchar conversion below    */
-DECL|field|HEX_DIGITS
-specifier|private
-specifier|static
-specifier|final
-name|char
-index|[]
-name|HEX_DIGITS
-init|=
-block|{
-literal|'0'
-block|,
-literal|'1'
-block|,
-literal|'2'
-block|,
-literal|'3'
-block|,
-literal|'4'
-block|,
-literal|'5'
-block|,
-literal|'6'
-block|,
-literal|'7'
-block|,
-literal|'8'
-block|,
-literal|'9'
-block|,
-literal|'a'
-block|,
-literal|'b'
-block|,
-literal|'c'
-block|,
-literal|'d'
-block|,
-literal|'e'
-block|,
-literal|'f'
-block|}
-decl_stmt|;
 annotation|@
 name|Override
 DECL|method|getLockID
@@ -1217,101 +1113,58 @@ name|e
 argument_list|)
 throw|;
 block|}
-name|byte
+name|int
 name|digest
-index|[]
-decl_stmt|;
-synchronized|synchronized
-init|(
-name|DIGESTER
-init|)
-block|{
-name|digest
-operator|=
-name|DIGESTER
-operator|.
-name|digest
-argument_list|(
-name|dirName
-operator|.
-name|getBytes
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-name|StringBuilder
-name|buf
 init|=
-operator|new
-name|StringBuilder
-argument_list|()
+literal|0
 decl_stmt|;
-name|buf
-operator|.
-name|append
-argument_list|(
-literal|"lucene-"
-argument_list|)
-expr_stmt|;
 for|for
 control|(
 name|int
-name|i
+name|charIDX
 init|=
 literal|0
 init|;
-name|i
+name|charIDX
 operator|<
-name|digest
+name|dirName
 operator|.
 name|length
+argument_list|()
 condition|;
-name|i
+name|charIDX
 operator|++
 control|)
 block|{
-name|int
-name|b
+specifier|final
+name|char
+name|ch
 init|=
-name|digest
-index|[
-name|i
-index|]
+name|dirName
+operator|.
+name|charAt
+argument_list|(
+name|charIDX
+argument_list|)
 decl_stmt|;
-name|buf
-operator|.
-name|append
-argument_list|(
-name|HEX_DIGITS
-index|[
-operator|(
-name|b
-operator|>>
-literal|4
-operator|)
-operator|&
-literal|0xf
-index|]
-argument_list|)
-expr_stmt|;
-name|buf
-operator|.
-name|append
-argument_list|(
-name|HEX_DIGITS
-index|[
-name|b
-operator|&
-literal|0xf
-index|]
-argument_list|)
+name|digest
+operator|=
+literal|31
+operator|*
+name|digest
+operator|+
+name|ch
 expr_stmt|;
 block|}
 return|return
-name|buf
+literal|"lucene-"
+operator|+
+name|Integer
 operator|.
-name|toString
-argument_list|()
+name|toHexString
+argument_list|(
+name|digest
+argument_list|)
 return|;
 block|}
 comment|/** Closes the store to future operations. */
