@@ -2771,6 +2771,236 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+comment|/**     * insecure, fast version of File.createTempFile    * uses Random instead of SecureRandom.    */
+DECL|method|createTempFile
+specifier|public
+specifier|static
+name|File
+name|createTempFile
+parameter_list|(
+name|String
+name|prefix
+parameter_list|,
+name|String
+name|suffix
+parameter_list|,
+name|File
+name|directory
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+comment|// Force a prefix null check first
+if|if
+condition|(
+name|prefix
+operator|.
+name|length
+argument_list|()
+operator|<
+literal|3
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"prefix must be 3"
+argument_list|)
+throw|;
+block|}
+name|String
+name|newSuffix
+init|=
+name|suffix
+operator|==
+literal|null
+condition|?
+literal|".tmp"
+else|:
+name|suffix
+decl_stmt|;
+name|File
+name|result
+decl_stmt|;
+do|do
+block|{
+name|result
+operator|=
+name|genTempFile
+argument_list|(
+name|prefix
+argument_list|,
+name|newSuffix
+argument_list|,
+name|directory
+argument_list|)
+expr_stmt|;
+block|}
+do|while
+condition|(
+operator|!
+name|result
+operator|.
+name|createNewFile
+argument_list|()
+condition|)
+do|;
+return|return
+name|result
+return|;
+block|}
+comment|/* Temp file counter */
+DECL|field|counter
+specifier|private
+specifier|static
+name|int
+name|counter
+init|=
+literal|0
+decl_stmt|;
+comment|/* identify for differnt VM processes */
+DECL|field|counterBase
+specifier|private
+specifier|static
+name|int
+name|counterBase
+init|=
+literal|0
+decl_stmt|;
+DECL|class|TempFileLocker
+specifier|private
+specifier|static
+class|class
+name|TempFileLocker
+block|{}
+empty_stmt|;
+DECL|field|tempFileLocker
+specifier|private
+specifier|static
+name|TempFileLocker
+name|tempFileLocker
+init|=
+operator|new
+name|TempFileLocker
+argument_list|()
+decl_stmt|;
+DECL|method|genTempFile
+specifier|private
+specifier|static
+name|File
+name|genTempFile
+parameter_list|(
+name|String
+name|prefix
+parameter_list|,
+name|String
+name|suffix
+parameter_list|,
+name|File
+name|directory
+parameter_list|)
+block|{
+name|int
+name|identify
+init|=
+literal|0
+decl_stmt|;
+synchronized|synchronized
+init|(
+name|tempFileLocker
+init|)
+block|{
+if|if
+condition|(
+name|counter
+operator|==
+literal|0
+condition|)
+block|{
+name|int
+name|newInt
+init|=
+operator|new
+name|Random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|()
+decl_stmt|;
+name|counter
+operator|=
+operator|(
+operator|(
+name|newInt
+operator|/
+literal|65535
+operator|)
+operator|&
+literal|0xFFFF
+operator|)
+operator|+
+literal|0x2710
+expr_stmt|;
+name|counterBase
+operator|=
+name|counter
+expr_stmt|;
+block|}
+name|identify
+operator|=
+name|counter
+operator|++
+expr_stmt|;
+block|}
+name|StringBuilder
+name|newName
+init|=
+operator|new
+name|StringBuilder
+argument_list|()
+decl_stmt|;
+name|newName
+operator|.
+name|append
+argument_list|(
+name|prefix
+argument_list|)
+expr_stmt|;
+name|newName
+operator|.
+name|append
+argument_list|(
+name|counterBase
+argument_list|)
+expr_stmt|;
+name|newName
+operator|.
+name|append
+argument_list|(
+name|identify
+argument_list|)
+expr_stmt|;
+name|newName
+operator|.
+name|append
+argument_list|(
+name|suffix
+argument_list|)
+expr_stmt|;
+return|return
+operator|new
+name|File
+argument_list|(
+name|directory
+argument_list|,
+name|newName
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+return|;
+block|}
 block|}
 end_class
 
